src/styles/style.css
/* ... */
.footer__logo:hover {
    color: #6a737d;
}


.notification {
    color: white;
    position: relative;
}

.notification:hover {
    color: rgba(255, 255, 255, 0.7);
}

.notification::after {
    content: "";
    top: -4px;
    left: 6px;
    border: 2px solid #242924;
    position: absolute;
    display: inline-block;
    width: 10px;
    height: 10px;
    color: #fff;
    background-image: linear-gradient(rgb(84, 163, 255), rgb(0, 110, 237));
    background-clip: padding-box;
    border-radius: 50%;
}


.hr-divider {
    border: 0;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    margin: 8px 0;
}


.signout-button {
    border: 0;
    text-align: center;
    background: transparent;
    text-align: left;
    font-size: 14px;
}

.signout-button:focus {
    outline: 0;
}


.bold-600 {
    font-weight: 600;
}


.mb-4 {
    margin-bottom: 4px;
}

.mb-10 {
    margin-bottom: 10px;
}

.mb-16 {
    margin-bottom: 16px;
}

.mr-8 {
    margin-right: 8px;
}


.w-75 {
    width: 75%;
}

.w-100 {
    width: 100%;
}

.light-text {
    font-weight: 500;
    opacity: 0.75;
}





@media (min-width: 768px) {

    /************************************ 
    *** Header Navs (for Medium Screens)
    *************************************/
    
    .main-nav {
        flex: 1;

        display: flex;
        align-items: center;
    }

    .main-nav__menu-item {
        margin-right: 14px;
    }

    .user__octicon_small {
        display: flex;

        position: relative;
        bottom: 6rem;
        right: -85%;
        z-index: 2;
    }

    .dashboard-nav-holder {
        position: relative;
    }

    .dashboard-nav-holder[open] .dashboard-nav {
        position: absolute;
        right: 0;
        z-index: 100;
    }

    .dashboard-nav {
        position: relative;
        display: flex;
        flex-flow: column nowrap;
        width: 170px;
        background: white;
        padding: 4px 0;
        margin-top: 4px;
        border-radius: 6px;
        box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
        border: 1px solid rgba(0, 0, 0, 0.1)
    }

    .dashboard-nav:before {
        content: '';
        position: absolute;
        top: -8px;
        right: 9px;
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        border-bottom: 8px solid white;
    }



    .dashboard-nav__item {
        color: rgb(36, 41, 46);
        text-decoration: none;
        padding: 4px 16px;
    }

    .operator-nav__item {
        margin-left: 16px;
    }

    .operator-nav__accordion {
        display: block;
    }

    .main-nav__menu-item_sm-only {
        display: none;
    }
    
    .search-form {
        margin-right: 1rem;
        max-width: 550px;
    }

    
    
    /************************************* 
    *** Faux Menu Nav (for Medium Screen)
    **************************************/
    
    #faux-menu-nav-toggle {
        display: none;
    }

    #faux-menu-nav.faux-menu-nav_active {
        display: none;
    }



    /************************************* 
    *** More Utitlities
    **************************************/

    .text-abstract {
        display: none;
    }

    .logo {
        margin-right: 16px;
    }


    .details__summary {
        color: white;
        cursor: pointer;
        position: relative;
    }

    .details__summary::after {
        content: '';
        border-left: 4px solid transparent;
        border-right: 4px solid transparent;
        border-top: 4px solid white;
        position: relative;
        bottom: -14px;
        left: 4px;
        margin-right: 4px;
    }

    .details__summary:focus {
        outline: 0;
    }

    .details__summary:hover {
        color: rgba(255, 255, 255, 0.7);
    }

    .details__summary::-webkit-details-marker {
        display: none;
    }

    


    
    .main-header {
        padding: 16px 24px;
        margin-bottom: 24px;
    }
    
    .repo {
        position: relative;
    }

    .repo-search {
        display: flex;
        align-items: center;
    }

    .repo__btn {
        margin: 0 16px 0 0;
    }


    /* User */

    .user {
        position: absolute;
        width: 25%;
        left: 0;
        top: 16px;
        padding: 0 8px 0 24px;
        box-sizing: border-box;
    }

    .user__main-details {
        flex-flow: column nowrap;
        align-items: start;
    }

    .user__image {
        width: 100%;
        margin: 0 0 16px 0;

        position: relative;
        z-index: 2;
    }

    .user__status {
        display: none;
    }

    .user-repo {
        width: 75%;
        margin-left: 25%;
        padding: 0 24px 0 8px;
    }


    .user-nav::before {
        flex: 0 0 25%;
    }

    .user-nav__icon {
        display: inline;
    }
}


@media (min-width: 1012px) {

    .main-header {
        padding: 16px 32px;
    }

    .text-abstract {
        display: inline;
    }

    .user {
        padding-left: 32px;
        padding-right:16px;
    }

    .user-repo {
        padding-right: 32px;
        padding-left: 16px;
    }

    .footer-nav {
        display: inline-block;
        margin-right: 16px;
    }
}

